Fix svg icons alignment in Spotlight actions sections

--- a/src/mantine-spotlight/src/Spotlight.module.css
+++ b/src/mantine-spotlight/src/Spotlight.module.css
@@ -102,6 +102,10 @@
   &[data-position='right'] {
     --_action-section-ml: var(--mantine-spacing-md);
   }
+
+  & > svg {
+    display: block;
+  }
 }
 
 .actionLabel {
